--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ pytest==7.3.1
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2022.7.1
- 
+redis>=4.5.4
 requests==2.28.2
 requests-oauthlib==1.3.1
 service-identity==21.1.0
