--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,13 @@
-aiodns==3.0.0
-aiosmtpd==1.4.4.post2
- 
+asgiref==3.5.2
 asgiref==3.6.0
-async-timeout==4.0.2
-atpublic==3.1.1
-attrs==22.2.0
-autobahn==23.1.2
-Automat==22.10.0
-certifi==2022.12.7
-cffi==1.15.1
 channels==4.0.0
-channels-redis==4.1.0
-charset-normalizer==3.1.0
-colorama==0.4.6
-constantly==15.1.0
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==39.0.2
-daphne==4.0.0
-defusedxml==0.7.1
-deprecation==2.1.0
 Django==4.1.7
-django-email-verification==0.3.1
-django-rest-knox==4.2.0
-django-templated-mail==1.1.1
-Django-Verify-Email==2.0.3
-djangochannelsrestframework==1.1.0
+django_email_verification==0.3.1
+django_rest_knox==4.2.0
+Django_Verify_Email==2.0.3
 djangorestframework==3.14.0
-djangorestframework-jwt==1.11.0
- 
-djoser==2.1.0
-exceptiongroup==1.1.1
-hyperlink==21.0.0
-idna==3.4
-incremental==22.10.0
-iniconfig==2.0.0
-install==1.3.5
-itypes==1.2.0
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-msgpack==1.0.5
-msgpack-python==0.5.6
-oauthlib==3.2.2
-packaging==23.1
-Pillow==9.4.0
-pluggy==1.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycares==4.3.0
-pycparser==2.21
-PyJWT==2.6.0
-pyOpenSSL==23.1.1
-pytest==7.3.1
+djangorestframework_jwt==1.11.0
+djangorestframework_simplejwt==4.8.0
 python-dotenv==1.0.0
-python3-openid==3.2.0
-pytz==2022.7.1
- 
-requests==2.28.2
-requests-oauthlib==1.3.1
-service-identity==21.1.0
 six==1.16.0
-social-auth-app-django==4.0.0
-social-auth-core==4.4.1
-sqlparse==0.4.3
-tomli==2.0.1
-Twisted==22.10.0
-twisted-iocpsupport==1.0.3
-txaio==23.1.1
-typing_extensions==4.5.0
-tzdata==2022.7
-uritemplate==4.1.1
-urllib3==1.26.15
-verify-email==2.4.3
-websocket-client==1.5.1
-websockets==11.0.1
-zope.interface==6.0
+verify_email==2.4.3
